<resources>
    <string name="app_name">Rachel\'s Sandwiches Gig</string>
    <string name="order_now">Order now!</string>
    <string name="comments">Comments:</string>
    <string name="tahini">Tahini</string>
    <string name="hummus">Hummus</string>
    <string name="pickles">Pickles:</string>
    <string name="name">Name:</string>
    <string name="new_order">New Order</string>
    <string name="change_order">Change order</string>
    <string name="delete_order">Delete order</string>
    <string name="edit_order">"Edit your order)>"</string>
    <string name="im_making">Your order is in the making…</string>
    <string name="Rachels_working">Rachel is working on your order, she will let you know once it is ready.</string>
    <string name="your_order_is_ready">Your order is ready!</string>
    <string name="confirm">Got it!</string>
</resources>